# SwMega

./: .gitignore  settings.gradle
app/: build.gradle  swordigomega.jks
app/release/: output-metadata.json
app/src/main/cpp/: CMakeLists.txt  main.c
app/src/main/cpp/assembly/: arm64.c  arm64.h  thumb.c  thumb.h  utils.c  utils.h
app/src/main/cpp/caver/: camera.h  components.c  components.h  program_state.c  program_state.h  scene_object.c  scene_object.h  types.h
app/src/main/cpp/config/: config.c  config.h  mini_config.c  mini_config.h
app/src/main/cpp/core/: assets.c  assets.h  cpp_strings.c  cpp_strings.h  hooks.c  hooks.h  java.c  java.h  jni.c  library_preload.c  log.c  log.h  lua.c
app/src/main/cpp/core/files/: dirent.c  dirent.h  stat.c  stat.h  stdio.c  stdio.h  stdio_files.c  stdio_files.h  stdlib.c  stdlib.h  unistd.c  unistd.h  utime.c  utime.h
app/src/main/cpp/core/files/patched/: dirent.h  stat.h  stdio.h  stdio_files.h  unistd.h  utime.h
app/src/main/cpp/core/impl_files/: backend.h  constants.h  errors.h  mini_file.h  path_parser.c  path_parser.h  paths.c  paths.h  resource_paths.c  resource_paths.h
app/src/main/cpp/core/impl_files/backend_assets/: backend.c  backend.h  dirent.c  stat.c  stdio.c  stdlib.c  unistd.c  utime.c
app/src/main/cpp/core/impl_files/backend_std/: backend.c  backend.h  dirent.c  stat.c  stdio.c  stdlib.c  unistd.c  utime.c
app/src/main/cpp/events/: profile.c  profile.h
app/src/main/cpp/features/: armor_models.c  armor_models.h  coin_limit.c  coin_limit.h
app/src/main/cpp/features/achievements/: README.md  ach32.c  ach64.c  achievements.c  achievements.h
app/src/main/cpp/features/cstrings/: cstrings.h  file.c  hooks.c  register.c  workarounds.c
app/src/main/cpp/init/: core.h  engine.h  events.h  features.h  lua_libs.h  main.h  patches.h
app/src/main/cpp/libs/: Gloss.h  README.md
app/src/main/cpp/lua/: README.md  lauxlib.h  ldblib.c  ldebug.h  ldo.h  lgc.h  linit.c  liolib.c  lmathlib.c  lmem.h  loadlib.c  lobject.h  loslib.c  lstate.h  ltablib.c  ltm.h  lua.h  luaconf.h  lualib.h  lzio.h
app/src/main/cpp/lua_libs/: camera.c  libs.h
app/src/main/cpp/lua_libs/button/: button.c  button.h  drawer.c  hooks.c  library.c  overlay.c  seekbar.c  textinput.c
app/src/main/cpp/lua_libs/components/: components.c  components.h  entity.c  health.c  helpers.h  library.c  physics.c  swingable_weapon_controller.c
app/src/main/cpp/lua_libs/lfs/: lfs.c  lfs.h
app/src/main/cpp/lua_libs/lni/: execute.c  lni.c  lni.h  register.c
app/src/main/cpp/lua_libs/mega/: arch.c  controls.c  debug.c  library.c  mini.h  profile.c  recreate_hero.c  scene_find_all.c  setmodel.c  the_map_function.c
app/src/main/cpp/offsets/: achievements.h  base.h  controllers.h  cpp_strings.h
app/src/main/cpp/patches/: 32patch.c  assets.c  crash_handler.c  lua_load_file.c  network.c  panic.c  program_state.c
app/src/main/cpp/patches/assets/: assets.h
app/src/main/cpp/utils/: byte_sequence.c  byte_sequence.h  files.c  files.h
app/src/main/java/net/itsjustsomedude/swrdg/: ButtonController.java  MainActivity.java
app/src/main/res/drawable/: game_seekbar.xml  game_seekbar_thumb.xml  game_textinput.xml
